--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,32 @@
+# Compiled class file
+*.class
 
-# Godot-specific ignores
-.import/
-export.cfg
-export_presets.cfg
+# Log file
+*.log
 
-# Mono-specific ignores
-.mono/
-data_*/
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+# Ignore generated sources
+generated-src/
